welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: missing arguments for method sleepIn in class sleepIn;
follow this method with `_' if you want to treat it as a partially applied function
	if (sleepIn(false, true) = true) {
            ^